[gd_scene load_steps=5 format=3 uid="uid://hfi4dgm7p3kp"]

[ext_resource type="Script" path="res://Spider/Spider.gd" id="1_48jws"]
[ext_resource type="Script" path="res://in_editor_tool.gd" id="1_ttyci"]
[ext_resource type="PackedScene" uid="uid://c1osw0oqll8ty" path="res://Models/spider1.1.blend" id="2_jr1ac"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_nlqdv"]
radius = 1.3115
height = 2.623

[node name="Spider" type="CharacterBody3D" node_paths=PackedStringArray("MAIN_BODY")]
script = ExtResource("1_48jws")
MAIN_BODY = NodePath("spider1_1")

[node name="Leg1Control" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 3)
top_level = true
gizmo_extents = 1.0

[node name="Leg2Control" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, -3)
top_level = true
gizmo_extents = 1.0

[node name="Leg3Control" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, -3)
top_level = true
gizmo_extents = 1.0

[node name="Leg4Control" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 3)
top_level = true
gizmo_extents = 1.0

[node name="ForwardDirection" type="RayCast3D" parent="."]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 2, 0)
target_position = Vector3(0, 0, -1)
debug_shape_custom_color = Color(0.964706, 0, 0.478431, 1)
debug_shape_thickness = 5

[node name="Leg1Basepos" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 3)
gizmo_extents = 1.0

[node name="RayCast3D" type="RayCast3D" parent="Leg1Basepos"]
target_position = Vector3(0, 2, 0)
collide_with_bodies = false
debug_shape_custom_color = Color(0, 1, 0, 1)
debug_shape_thickness = 5

[node name="Leg2Basepos" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, -3)
gizmo_extents = 1.0

[node name="RayCast3D" type="RayCast3D" parent="Leg2Basepos"]
target_position = Vector3(0, 2, 0)
collide_with_bodies = false
debug_shape_custom_color = Color(0, 1, 0, 1)
debug_shape_thickness = 5

[node name="Leg3Basepos" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, -3)
gizmo_extents = 1.0

[node name="RayCast3D" type="RayCast3D" parent="Leg3Basepos"]
target_position = Vector3(0, 2, 0)
collide_with_bodies = false
debug_shape_custom_color = Color(0, 1, 0, 1)
debug_shape_thickness = 5

[node name="Leg4Basepos" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 3)
gizmo_extents = 1.0

[node name="RayCast3D" type="RayCast3D" parent="Leg4Basepos"]
target_position = Vector3(0, 2, 0)
collide_with_bodies = false
debug_shape_custom_color = Color(0, 1, 0, 1)
debug_shape_thickness = 5

[node name="F_RayHead" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5)
target_position = Vector3(0, 1, -0.25)

[node name="B_RayHead" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.5)
target_position = Vector3(0, 1, 0.25)

[node name="LegForwardDetectors" type="Node3D" parent="."]

[node name="F_RayLeg1" type="RayCast3D" parent="LegForwardDetectors"]
transform = Transform3D(1, 0, 0, 0, 0.965926, -0.258819, 0, 0.258819, 0.965926, -3, 0, 3)
target_position = Vector3(0, 4, 0)
debug_shape_custom_color = Color(1, 0, 0, 1)
debug_shape_thickness = 5

[node name="F_RayLeg2" type="RayCast3D" parent="LegForwardDetectors"]
transform = Transform3D(1, 0, 0, 0, 0.965926, -0.258819, 0, 0.258819, 0.965926, -3, 0, -3)
target_position = Vector3(0, 4, 0)
debug_shape_custom_color = Color(1, 0, 0, 1)
debug_shape_thickness = 5

[node name="F_RayLeg3" type="RayCast3D" parent="LegForwardDetectors"]
transform = Transform3D(1, 0, 0, 0, 0.965926, -0.258819, 0, 0.258819, 0.965926, 3, 0, -3)
target_position = Vector3(0, 4, 0)
debug_shape_custom_color = Color(1, 0, 0, 1)
debug_shape_thickness = 5

[node name="F_RayLeg4" type="RayCast3D" parent="LegForwardDetectors"]
transform = Transform3D(1, 0, 0, 0, 0.965926, -0.258819, 0, 0.258819, 0.965926, 3, 0, 3)
target_position = Vector3(0, 4, 0)
debug_shape_custom_color = Color(1, 0, 0, 1)
debug_shape_thickness = 5

[node name="LegBackwardsDetectors" type="Node3D" parent="."]

[node name="B_RayLeg1" type="RayCast3D" parent="LegBackwardsDetectors"]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, -3, 0, 3)
target_position = Vector3(0, 4, 0)
debug_shape_custom_color = Color(0, 0.85098, 1, 1)
debug_shape_thickness = 5

[node name="B_RayLeg2" type="RayCast3D" parent="LegBackwardsDetectors"]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, -3, 0, -3)
target_position = Vector3(0, 4, 0)
debug_shape_custom_color = Color(0, 0.85098, 1, 1)
debug_shape_thickness = 5

[node name="B_RayLeg3" type="RayCast3D" parent="LegBackwardsDetectors"]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 3, 0, -3)
target_position = Vector3(0, 4, 0)
debug_shape_custom_color = Color(0, 0.85098, 1, 1)
debug_shape_thickness = 5

[node name="B_RayLeg4" type="RayCast3D" parent="LegBackwardsDetectors"]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 3, 0, 3)
target_position = Vector3(0, 4, 0)
debug_shape_custom_color = Color(0, 0.85098, 1, 1)
debug_shape_thickness = 5

[node name="spider1_1" parent="." instance=ExtResource("2_jr1ac")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="StaticBody3D" parent="spider1_1/Spider/Skeleton3D/Body" index="0"]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0, 0)
visible = false
collision_layer = 0
collision_mask = 0

[node name="SkeletonIK3D" type="SkeletonIK3D" parent="spider1_1/Spider/Skeleton3D" index="5"]
process_priority = 1
root_bone = &"leg1"
tip_bone = &"leg1.godotcontrol"
use_magnet = true
magnet = Vector3(0, 10, 0)
target_node = NodePath("../../../../Leg1Control")
script = ExtResource("1_ttyci")

[node name="SkeletonIK3D2" type="SkeletonIK3D" parent="spider1_1/Spider/Skeleton3D" index="6"]
process_priority = 1
root_bone = &"leg2"
tip_bone = &"leg2.godotcontrol"
use_magnet = true
magnet = Vector3(0, 10, 0)
target_node = NodePath("../../../../Leg2Control")
script = ExtResource("1_ttyci")

[node name="SkeletonIK3D3" type="SkeletonIK3D" parent="spider1_1/Spider/Skeleton3D" index="7"]
process_priority = 1
root_bone = &"leg3"
tip_bone = &"leg3.godotcontrol"
use_magnet = true
magnet = Vector3(0, 10, 0)
target_node = NodePath("../../../../Leg3Control")
script = ExtResource("1_ttyci")

[node name="SkeletonIK3D4" type="SkeletonIK3D" parent="spider1_1/Spider/Skeleton3D" index="8"]
process_priority = 1
root_bone = &"leg4"
tip_bone = &"leg4.godotcontrol"
use_magnet = true
magnet = Vector3(0, 10, 0)
target_node = NodePath("../../../../Leg4Control")
script = ExtResource("1_ttyci")

[node name="GroundDetectorArea" type="Area3D" parent="."]
collision_layer = 0

[node name="GroundTrigger" type="CollisionShape3D" parent="GroundDetectorArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.990016, 0)
shape = SubResource("CapsuleShape3D_nlqdv")

[editable path="spider1_1"]
